--- a/css/app.css
+++ b/css/app.css
@@ -201,9 +201,13 @@ header.dark .logo-light {
   position: relative;
   width: min(380px, 100%);
   margin-inline: auto;
-  padding-inline: 2rem;
 }
 
+@media (min-width: 800px) {
+  .container {
+    width: min(800px, 100%);
+  }
+}
 @media (min-width: 960px) {
   .container {
     width: min(800px, 100%);
@@ -219,7 +223,7 @@ header.dark .logo-light {
     width: min(1280px, 100%);
   }
 }
-.info {
+.about {
   z-index: 0;
   position: relative;
   display: flex;
@@ -227,42 +231,54 @@ header.dark .logo-light {
   padding-block: 12rem;
   min-height: calc(100vh - 14.8rem);
 }
-.info .flex {
+.about .flex {
   display: flex;
   flex-direction: column;
   gap: 3rem;
 }
 @media (min-width: 1280px) {
-  .info .flex {
+  .about .flex {
     flex-direction: row;
     gap: 0;
   }
 }
-.info .flex--col-2 {
+.about .flex--col-2 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   flex-basis: 100%;
   padding-left: 0;
 }
-.info .flex--col-2:last-child {
+.about .flex--col-2:last-child {
   max-width: 32rem;
 }
-@media (min-width: 1280px) {
-  .info .flex--col-2 {
-    gap: 1.5rem;
-    flex-basis: 50%;
-  }
-  .info .flex--col-2:last-child {
-    max-width: 24rem;
-    margin-top: 0.2rem;
+@media (min-width: 960px) {
+  .about .flex--col-2 {
+    padding-left: 3rem;
   }
 }
-.info h3 img {
+@media (min-width: 1280px) {
+  .about .flex--col-2 {
+    gap: 1.5rem;
+    flex-basis: 50%;
+    padding-left: 4rem;
+  }
+  .about .flex--col-2:last-child {
+    max-width: 24rem;
+    margin-top: 0.2rem;
+    padding-left: 0rem;
+  }
+}
+@media (min-width: 1600px) {
+  .about .flex--col-2 {
+    padding-left: 6rem;
+  }
+}
+.about h3 img {
   vertical-align: middle;
   margin-top: -0.8rem;
 }
-.info h4 {
+.about h4 {
   margin-bottom: 0.1rem;
 }
 
@@ -321,8 +337,7 @@ html {
 
 body {
   font-family: 'DM Sans', sans-serif;
-  font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   letter-spacing: -0.01em;
   line-height: 1.4;
   -webkit-font-smoothing: antialiased;
@@ -331,7 +346,7 @@ body {
 
 h1, h2, h3 {
   letter-spacing: -0.025em;
-  line-height: 1.1;
+  line-height: 1.08;
 }
 
 .fs--1 {
@@ -349,7 +364,7 @@ h1, h2, h3 {
 .ff--mono {
   font-family: 'JetBrains mono', serif;
   font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
   margin-top: 0.2em;
 }
@@ -587,220 +602,135 @@ svg.eyeball circle {
 }
 @media (min-width: 1600px) {
   .hero .headline {
-    padding-left: 0rem;
+    padding-left: 6rem;
   }
 }
 .work {
-  z-index: 4;
+  border-bottom: var(--border-width) solid var(--clr-border);
+}
+
+.work__row {
   position: relative;
+  border-top: var(--border-width) solid var(--clr-border);
+}
+.work__row:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -0.1rem;
+  height: 100%;
+  width: var(--border-width);
+}
+
+.work__grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  border-left: var(--border-width) solid var(--clr-border);
+  border-right: var(--border-width) solid var(--clr-border);
+}
+@media (min-width: 800px) {
+  .work__grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.project {
+  position: relative;
+  padding: 1.5rem;
   border-bottom: var(--border-width) solid var(--clr-border);
   overflow: hidden;
 }
-.work .project .project__inner {
-  position: relative;
-  height: var(--large-slide);
+.project.info .project__info {
+  transform: translateY(2rem);
+  opacity: 1;
 }
-
-.project__slides {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-shrink: 0;
-  transition: all 0.6s var(--ease-out);
-}
-@media (min-width: 600px) {
-  .project__slides {
-    transition: all 1.2s var(--ease-out);
-  }
-}
-.project__slides .project__slide {
-  position: relative;
-  display: flex;
-  flex-shrink: 0;
-  aspect-ratio: 1 / 1;
-}
-.project__slides .project__slide img, .project__slides .project__slide video, .project__slides .project__slide .text__slide-inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: scale(0.9);
-  backface-visibility: hidden;
-}
-.project__slides .project__slide:first-child {
-  transform: scale(1);
+.project.info .project__slider {
+  transform: translate(4rem, 75%) rotate(-8deg);
 }
 
 .project__header {
-  border-bottom: var(--border-width) solid var(--clr-border);
-  border-top: var(--border-width) solid var(--clr-border);
-  height: 100%;
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+  background-color: var(--clr-light);
 }
 
-.project__header-inner {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 3rem;
-  width: var(--large-slide);
-  padding-inline: 1rem;
-  border-left: var(--border-width) solid var(--clr-border);
-  border-right: var(--border-width) solid var(--clr-border);
-}
-.project__header-inner .ff--mono {
-  margin: 0;
-}
-
-.project__action {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: flex;
-  height: 3rem;
-}
-.project__action .action__link {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 3rem;
-  height: 3rem;
-  border-left: var(--border-width) solid var(--clr-border);
-  overflow: hidden;
+.project__info-btn {
   cursor: pointer;
-}
-.project__action .action__link svg {
-  height: 1.4rem;
-  margin-top: 0.5rem;
-  stroke: var(--clr-dark);
-}
-.project__action .action__info {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 3rem;
-  height: 3rem;
-  border-left: var(--border-width) solid var(--clr-border);
-  overflow: hidden;
-  cursor: pointer;
-}
-.project__action .action__info .action__inner {
-  height: 1.6rem;
-}
-.project__action .action__info svg {
-  height: 1.6rem;
-  stroke: var(--clr-dark);
 }
 
 .project__info {
-  margin-top: -2px;
-  border-bottom: var(--border-width) solid transparent;
-  transition: border-color 0.6s var(--ease-out);
+  position: absolute;
+  left: 0;
+  transform: translateY(6rem);
+  opacity: 0;
+  padding-inline: 1.5rem;
+  transition: all 0.8s var(--ease-out);
 }
-.project__info.active {
-  border-color: var(--clr-border);
-}
-.project__info.active .project__info-inner {
-  height: 8rem;
-}
-
-.project__info-inner {
-  position: relative;
+.project__info .details {
   display: flex;
-  flex-direction: row;
-  gap: 3rem;
-  align-items: center;
-  height: 0;
-  width: var(--large-slide);
-  padding-inline: 1rem;
-  line-height: 1.1;
-  border-left: var(--border-width) solid var(--clr-border);
-  border-right: var(--border-width) solid var(--clr-border);
-  overflow: hidden;
-  transition: height 0.6s var(--ease-out);
+  gap: 5rem;
+  margin-top: 2rem;
 }
-.project__info-inner > * {
+.project__info .detail {
   display: flex;
   flex-direction: column;
+  line-height: 1.1;
 }
-.project__info-inner .ff--mono {
-  margin: 0;
-  font-size: 1.1rem;
-}
-.project__info-inner p {
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-@media (min-width: 960px) {
-  .project__info-inner {
-    gap: 4rem;
-  }
-}
-@media (min-width: 1440px) {
-  .project__info-inner {
-    gap: 6rem;
-  }
+.project__info .project__link {
+  display: inline-block;
+  margin-top: 2rem;
+  padding-inline: 1.5em;
+  height: 2.4rem;
+  line-height: 2.5rem;
+  background: var(--clr-dark);
+  color: var(--clr-light);
 }
 
-.project__square {
-  z-index: 2;
-  position: absolute;
-  top: 0;
-  display: flex;
-  align-items: center;
-  width: var(--large-slide);
-  height: var(--large-slide);
-  border-right: var(--border-width) solid var(--clr-border);
-  border-left: var(--border-width) solid var(--clr-border);
+.project__slider {
+  position: relative;
+  width: 100%;
+  transition: all 0.8s var(--ease-out);
 }
-.project__square .project__slider {
-  width: var(--large-slide);
-  height: var(--large-slide);
-  margin-inline: auto;
+.project__slider img, .project__slider video {
+  display: block;
+}
+
+.slide__active {
+  width: 100%;
   overflow: hidden;
 }
-.project__square .project__slides .project__slide {
-  height: var(--large-slide);
+.slide__active .slide__active-inner {
+  width: 100%;
+  aspect-ratio: 1 / 0.9;
+  transform: scale(1.01);
+}
+.slide__active img, .slide__active video {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.project__blur {
-  z-index: 0;
-  position: absolute;
-  width: var(--small-slide);
-  height: var(--small-slide);
-  top: 50%;
-  transform: translate(0, -50%);
+.slide__thumbs {
+  width: calc(100% + 0.3rem);
+  display: flex;
+  margin-block: 0.3rem;
 }
-.project__blur .project__slider {
-  width: var(--small-slide);
-  height: var(--small-slide);
-  margin-inline: auto;
+.slide__thumbs .thumb {
+  flex-basis: calc(100% / 8);
+  padding-right: 0.3rem;
 }
-.project__blur .project__slides {
-  pointer-events: none;
-  opacity: 0.8;
-}
-.project__blur .project__slides .project__slide {
-  height: var(--small-slide);
-}
-.project__blur .project__slides .project__slide img, .project__blur .project__slides .project__slide video {
-  filter: blur(3px);
-}
-
-@media (min-width: 960px) {
-  .project__blur .project__slider {
-    padding-left: 12rem;
-  }
-  .project__blur .project__info h2 {
-    font-size: 2rem;
-  }
-}
-@media (min-width: 1280px) {
-  .project__blur .project__info h2 {
-    font-size: 2.4rem;
-  }
+.slide__thumbs .thumb img, .slide__thumbs .thumb video {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=app.css.map */
