--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,7 +39,12 @@ header{
    position:relative;
    width:min(380px, 100%);
    margin-inline:auto;
-   padding-inline:2rem;
+   //padding-inline:2rem;
+}
+@media(min-width:800px){
+   .container{
+      width:min(800px, 100%);
+   }
 }
 @media(min-width:960px){
    .container{
@@ -58,9 +63,9 @@ header{
 }
 
 // ———————————————————————–––––––––––––––––––––––––––––––––––
-// Info
+// About
 // ———————————————————————–––––––––––––––––––––––––––––––––––
-.info{
+.about{
    z-index:0;
    position:relative;
    display:flex;
@@ -85,13 +90,21 @@ header{
       &:last-child{
          max-width:32rem;
       }
+      @media(min-width:960px){
+         padding-left:3rem;
+      }
       @media(min-width:1280px){
          gap:1.5rem;
          flex-basis:50%;
+         padding-left:4rem;
          &:last-child{
             max-width:24rem;
             margin-top:0.2rem;
+            padding-left:0rem;
          }
+      }
+      @media(min-width:1600px){
+         padding-left:6rem;
       }
    }
    h3{
