--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -6,8 +6,8 @@ html{
 }
 body{
   font-family: 'DM Sans', sans-serif;
-  font-weight:500;
-  font-size:1.5rem;
+  //font-weight:500;
+  font-size:1.4rem;
   letter-spacing:-0.01em;
   line-height:1.4;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +15,7 @@ body{
 }
 h1, h2, h3{
   letter-spacing:-0.025em;
-  line-height:1.1;
+  line-height:1.08;
 }
 .fs--1{
   font-size:3.6rem;
@@ -30,7 +30,7 @@ h1, h2, h3{
 .ff--mono{
   font-family: 'JetBrains mono', serif;
   font-weight:500;
-  font-size:1.2rem;
+  font-size:1.1rem;
   text-transform: uppercase;
   margin-top:0.2em;
 }
