--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -2,238 +2,125 @@
 // Work
 // ———————————————————————–––––––––––––––––––––––––––––––––––
 .work{
-    z-index:4;
+    border-bottom:var(--border-width) solid var(--clr-border);
+}
+.work__row{
     position:relative;
-    border-bottom:var(--border-width) solid var(--clr-border);
-    overflow:hidden;
-    .project{
-        //border-top:var(--border-width) solid var(--clr-border);
-        .project__inner{
-            position:relative;
-            height:var(--large-slide);
-        }
-    }
-}
-
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-// Slides
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-.project__slides{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-shrink:0;
-    transition:all 0.6s var(--ease-out);
-    @media(min-width:600px){
-        transition:all 1.2s var(--ease-out);
-    }
-    .project__slide{
-        position:relative;
-        display:flex;
-        flex-shrink:0;
-        aspect-ratio: 1 / 1;
-        img, video, .text__slide-inner{
-            position:absolute;
-            top:0;
-            left:0;
-            width:100%;
-            height:100%;
-            object-fit: cover;
-            transform:scale(0.9); 
-            backface-visibility: hidden; 
-        }
-        &:first-child{
-            transform:scale(1); 
-        }
-    }
-}
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-// Info
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-.project__header{
-    border-bottom:var(--border-width) solid var(--clr-border);
+    //padding-inline:1.5rem;
     border-top:var(--border-width) solid var(--clr-border);
-    height:100%;
+    &:after{
+        content:"";
+        display:block;
+        position:absolute;
+        top:0;
+        left:50%;
+        margin-left:-0.1rem;
+        height:100%;
+        width:var(--border-width);
+        //background-color:var(--clr-border);
+    }
 }
-.project__header-inner{
-    position:relative;
-    display:flex;
-    align-items: center;
-    height:3rem;
-    width:var(--large-slide);
-    padding-inline:1rem;
+.work__grid{
+    display:grid;
+    grid-template-columns: 1fr;
     border-left:var(--border-width) solid var(--clr-border);
     border-right:var(--border-width) solid var(--clr-border);
-    .ff--mono{
-        margin:0;
+    @media(min-width:800px){
+        grid-template-columns: 1fr 1fr;
     }
 }
-.project__action{
-    position:absolute;
-    top:0;
-    right:0;
+.project{
+    position:relative;
+    padding:1.5rem;
+    border-bottom:var(--border-width) solid var(--clr-border);
+    overflow:hidden;
+    &.info{
+        .project__info{
+            transform:translateY(2rem);
+            opacity:1;
+        }
+        .project__slider{
+            transform:translate(4rem, 75%) rotate(-8deg);
+        }
+    }
+}
+.project__header{
+    z-index:2;
+    position:relative;
+    width:100%;
     display:flex;
-    height:3rem;
-    .action__link{
-        position:relative;
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        width:3rem;
-        height:3rem;
-        border-left:var(--border-width) solid var(--clr-border);
-        overflow:hidden;
-        cursor: pointer;
-        svg{
-            height:1.4rem;
-            margin-top:0.5rem;
-            stroke:var(--clr-dark);
-        }
-    }
-    .action__info{
-        position:relative;
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        width:3rem;
-        height:3rem;
-        border-left:var(--border-width) solid var(--clr-border);
-        overflow:hidden;
-        cursor: pointer;
-        .action__inner{
-            height:1.6rem;
-        }
-        svg{
-            height:1.6rem;
-            stroke:var(--clr-dark);
-        }
-    }
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom:0.5rem;
+    background-color:var(--clr-light);
+}
+.project__info-btn{
+    cursor:pointer;
 }
 .project__info{
-    margin-top:-2px;
-    border-bottom:var(--border-width) solid transparent;
-    transition:border-color 0.6s var(--ease-out);
-    &.active{
-        border-color:var(--clr-border);
-        .project__info-inner{
-            height:8rem;
-        }
+    position:absolute;
+    left:0;
+    transform:translateY(6rem);
+    opacity:0;
+    padding-inline:1.5rem;
+    transition:all 0.8s var(--ease-out);
+    .details{
+        display:flex;
+        gap:5rem;
+        margin-top:2rem;
     }
-}
-.project__info-inner{
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    gap:3rem;
-    align-items: center;
-    height:0;
-    width:var(--large-slide);
-    padding-inline:1rem;
-    line-height:1.1;
-    border-left:var(--border-width) solid var(--clr-border);
-    border-right:var(--border-width) solid var(--clr-border);
-    overflow:hidden;
-    transition:height 0.6s var(--ease-out);
-    > *{
+    .detail{
         display:flex;
         flex-direction: column;
+        line-height:1.1;
     }
-    .ff--mono{
-        margin:0;
-        font-size:1.1rem;
-    }
-    p{
-        font-size:1.3rem;
-        font-weight:600;
-    }
-    @media(min-width:960px){
-        gap:4rem;
-    }
-    @media(min-width:1440px){
-        gap:6rem;
+    .project__link{
+        display:inline-block;
+        margin-top:2rem;
+        padding-inline:1.5em;
+        height:2.4rem;
+        line-height:2.5rem;
+        background:var(--clr-dark);
+        color:var(--clr-light);
     }
 }
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-// Square
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-.project__square{
-    z-index:2;
-    position:absolute;
-    top:0;
+.project__slider{
+    position:relative;
+    width:100%;
+    transition:all 0.8s var(--ease-out);
+    img, video{
+        display:block;
+    }
+}
+.slide__active{
+    width:100%;
+    overflow:hidden;
+    .slide__active-inner{
+        width:100%;
+        aspect-ratio: 1 / 0.9;
+        transform:scale(1.01);
+    }
+    img, video{
+        display:block;
+        width:100%;
+        height:100%;
+        object-fit: cover;
+    }
+}
+.slide__thumbs{
+    width:calc(100% + 0.3rem);
     display:flex;
-    align-items: center;
-    width:var(--large-slide);
-    height:var(--large-slide);
-    border-right:var(--border-width) solid var(--clr-border);
-    border-left:var(--border-width) solid var(--clr-border);
-    .project__slider{
-        width: var(--large-slide);
-        height:var(--large-slide);
-        margin-inline:auto;
-        overflow:hidden;
-    }
-    .project__slides{
-        .project__slide{
-            height: var(--large-slide);
+    margin-block:0.3rem;
+    .thumb{
+        flex-basis:calc(100% / 8);
+        padding-right:0.3rem;
+        img, video{
+            display:block;
+            width:100%;
+            height:auto;
         }
     }
 }
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-// Blur
-// ———————————————————————–––––––––––––––––––––––––––––––––––
-.project__blur{
-    z-index:0;
-    position:absolute;
-    width:var(--small-slide);
-    height:var(--small-slide);
-    top:50%;
-    transform:translate(0, -50%);
-    .project__slider{
-        width: var(--small-slide);
-        height:var(--small-slide);
-        margin-inline:auto;
-    }
-    .project__slides{
-        pointer-events: none;
-        opacity:0.8;
-        .project__slide{
-            height: var(--small-slide);
-            img, video{
-                filter: blur(3px);
-            }
-        }
-    }
-
-}
-
-@media(min-width:960px){
-    
-    .project__blur{
-        .project__slider{
-           padding-left:12rem;
-        }
-        .project__info{
-            h2{
-                font-size:2rem;
-            }
-        }
-    }
-}
-
-@media(min-width:1280px){
-   
-    .project__blur{
-        .project__info{
-            h2{
-                font-size:2.4rem;
-            }
-        }
-    }
-}
-
-@media(min-width:1600px){
-    
-}
-
 
 
 
