--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -2,14 +2,14 @@
     --clr-dark:#181818;
     --clr-light:#f6f6f6; 
     --clr-secondary:#888;
-    --clr-highlight:#f84c26;
+    --clr-highlight:#19e9bf;
     --clr-border:#111;
 }
 [data-theme="dark"]{
     --clr-dark:#f6f6f6;
     --clr-light:#181818; 
-    --clr-secondary:#999;
-    --clr-highlight:#f84c26;
+    --clr-secondary:#888;
+    --clr-highlight:#26f8ce;
     --clr-border:#727272;
 }
 body, .work, .project__square{
