--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -110,12 +110,14 @@ svg.eyeball{
 }
 
 
-.heart-svg{
+svg.heart{
     width:3rem;
+    height:3rem;
     transition:all 0.6s var(--ease-in-out-quad);
     animation: spinHeart 3s infinite;
     @media(min-width:1280px){
         width:4rem;
+        height:4rem;
     }
 }
 
