--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,181 +1,178 @@
 // ——————————————————————————————————————————
 // Work / Project layout
 // ——————————————————————————————————————————
-.work{
-    border-bottom:var(--border-width) solid var(--clr-border);
+.work {
+	border-bottom: var(--border-width) solid var(--clr-border);
 }
-.work__row{
-    position:relative;
-    border-top:var(--border-width) solid var(--clr-border);
-    &:after{
-        content:"";
-        display:block;
-        position:absolute;
-        top:0;
-        left:50%;
-        margin-left:-0.1rem;
-        height:100%;
-        width:var(--border-width);
-        @media(min-width:760px){
-            background-color:var(--clr-border);
-        }
-    }
+.work__row {
+	position: relative;
+	border-top: var(--border-width) solid var(--clr-border);
+	&:after {
+		content: "";
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 50%;
+		margin-left: -0.1rem;
+		height: 100%;
+		width: var(--border-width);
+		@media (min-width: 760px) {
+			background-color: var(--clr-border);
+		}
+	}
 }
-.work__grid{
-    display:grid;
-    grid-template-columns: 1fr;
-    @media(min-width:760px){
-        grid-template-columns: 1fr 1fr;
-        border-left:var(--border-width) solid var(--clr-border);
-        border-right:var(--border-width) solid var(--clr-border);
-    }
-    .align--right{
-        grid-column: 2 / 3;
-    }
+.work__grid {
+	display: grid;
+	grid-template-columns: 1fr;
+	@media (min-width: 760px) {
+		grid-template-columns: 1fr 1fr;
+		border-left: var(--border-width) solid var(--clr-border);
+		border-right: var(--border-width) solid var(--clr-border);
+	}
+	.align--right {
+		grid-column: 2 / 3;
+	}
 }
-.project{
-    position:relative;
-    padding:1rem;
-    @media(min-width:960px){
-        padding:3rem;
-    }
-    overflow:hidden;
-    &.info{
-        .project__info{
-            transform:translateY(1rem);
-            opacity:1;
-            @media(min-width:1280px){
-                transform:translateY(2rem);
-            }
-        }
-        .project__slider{
-            transform:translate(2.4rem, 65%) rotate(-8deg);
-            @media(min-width:960px){
-                transform:translate(3.6rem, 50%) rotate(-8deg);
-            }
-        }
-    }
+.project {
+	position: relative;
+	padding: 1rem;
+	@media (min-width: 960px) {
+		padding: 3rem;
+	}
+	overflow: hidden;
+	&.info {
+		.project__info {
+			transform: translateY(1rem);
+			opacity: 1;
+			@media (min-width: 1280px) {
+				transform: translateY(2rem);
+			}
+		}
+		.project__slider {
+			transform: translate(2.4rem, 65%) rotate(-8deg);
+			@media (min-width: 960px) {
+				transform: translate(3.6rem, 50%) rotate(-8deg);
+			}
+		}
+	}
 }
-.project__header{
-    z-index:2;
-    position:relative;
-    width:100%;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom:0.5rem;
+.project__header {
+	z-index: 2;
+	position: relative;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 0.5rem;
 }
 // ——————————————————————————————————————————
 // Project info
 // ——————————————————————————————————————————
-.project__info-btn{
-    background-color:var(--clr-light);
-    color:var(--clr-secondary);
-    padding-inline:0.25em;
-    padding-top:0.15em;
-    cursor:pointer;
-    user-select: none;
+.project__info-btn {
+	background-color: var(--clr-light);
+	color: var(--clr-secondary);
+	padding-inline: 0.25em;
+	padding-top: 0.15em;
+	cursor: pointer;
+	user-select: none;
 }
-.project__info{
-    position:absolute;
-    left:0;
-    transform:translateY(6rem);
-    opacity:0;
-    padding-inline:1rem;
-    @media(min-width:960px){
-        padding-inline:3rem;
-    }
-    transition:all 0.8s var(--ease-out);
-    .details{
-        display:flex;
-        gap:3rem;
-        margin-top:2rem;
-        @media(min-width:960px){
-            gap:5rem;
-        }
-    }
-    .detail{
-        display:flex;
-        flex-direction: column;
-    }
-    .project__link{
-        display:inline-block;
-        margin-top:2rem;
-        padding-inline:0.5em;
-        height:2rem;
-        line-height:2.1rem;
-        background:var(--clr-secondary);
-        color:var(--clr-light);
-    }
+.project__info {
+	position: absolute;
+	left: 0;
+	transform: translateY(6rem);
+	opacity: 0;
+	padding-inline: 1rem;
+	@media (min-width: 960px) {
+		padding-inline: 3rem;
+	}
+	transition: all 0.8s var(--ease-out);
+	.details {
+		display: flex;
+		gap: 3rem;
+		margin-top: 2rem;
+		@media (min-width: 960px) {
+			gap: 5rem;
+		}
+	}
+	.detail {
+		display: flex;
+		flex-direction: column;
+	}
+	.project__link {
+		display: inline-block;
+		margin-top: 2rem;
+		padding-inline: 0.5em;
+		height: 2rem;
+		line-height: 2.1rem;
+		background: var(--clr-secondary);
+		color: var(--clr-light);
+		&:hover {
+			background: var(--clr-highlight);
+		}
+	}
 }
 // ——————————————————————————————————————————
 // Project slider
 // ——————————————————————————————————————————
-.project__slider{
-    position:relative;
-    width:100%;
-    will-change: transform;
-    transition:all 0.8s var(--ease-out);
-    img, video{
-        display:block;
-    }
+.project__slider {
+	position: relative;
+	width: 100%;
+	will-change: transform;
+	transition: all 0.8s var(--ease-out);
+	img,
+	video {
+		display: block;
+	}
 }
-.slide__active{
-    width:100%;
-    overflow:hidden;
-    .slide__active-inner{
-        width:100%;
-        aspect-ratio: 1 / 0.9;
-        transform:scale(1.01);
-    }
-    img, video{
-        display:block;
-        width:100%;
-        height:100%;
-        object-fit: cover;
-    }
+.slide__active {
+	width: 100%;
+	overflow: hidden;
+	.slide__active-inner {
+		width: 100%;
+		aspect-ratio: 1 / 0.9;
+		transform: scale(1.01);
+	}
+	img,
+	video {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
-.slide__thumbs{
-    width:calc(100% + 0.3rem);
-    display:flex;
-    margin-block:0.3rem;
-    .thumb{
-        position:relative;
-        flex-basis:calc(100% / 8);
-        padding-right:0.3rem;
-        cursor:pointer;
-        img, video{
-            display:block;
-            width:100%;
-            height:auto;
-            user-select: none;
-        }
-        &:after{
-            content:"";
-            display:block;
-            z-index:1;
-            position:absolute;
-            top:0;
-            left:0;
-            width:calc(100% - 0.3rem);
-            height:100%;
-            border:2px solid transparent;
-            transition:border-color 0.8s var(--ease-out);
-        }
-        &:hover, &.active{
-            &:after{
-                border-color:var(--clr-highlight);
-            }
-        }
-    }
+.slide__thumbs {
+	width: calc(100% + 0.3rem);
+	display: flex;
+	margin-block: 0.3rem;
+	.thumb {
+		position: relative;
+		flex-basis: calc(100% / 8);
+		padding-right: 0.3rem;
+		cursor: pointer;
+		img,
+		video {
+			display: block;
+			width: 100%;
+			height: auto;
+			user-select: none;
+		}
+		&:after {
+			content: "";
+			display: block;
+			z-index: 1;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: calc(100% - 0.3rem);
+			height: 100%;
+			border: 2px solid transparent;
+			transition: border-color 0.8s var(--ease-out);
+		}
+		&:hover,
+		&.active {
+			&:after {
+				border-color: var(--clr-highlight);
+			}
+		}
+	}
 }
-
-
-
-  
-
-
-
-
-
-
